<resources>
    <string name="app_name">Titan Archers Scoring</string>

    <string name="blankScore">00</string>
<!--    <string name="subtotal">Subtotal:0</string>
    <string name="total">Total:0</string> -->
    <string name="shareScoreCard">Share Score Card</string>
    <string name="shareGroup">Share Arrow Groups</string>
<!--    <string name="nextActivity">Score Card</string> -->
    <string name="redoOption">Redo</string>
    <string name="detailOption">Details</string>
    <string name="showOption">Show Target</string>
    <string name="archerName">Enter your name</string>
    <string name="labelName">Name:</string>
    <string name="targetDistance">Enter target\s distance</string>
    <string name="labelDistance">Distance:</string>
    <string name="saveDetails">Save</string>
    <string name="cancelDetails">Cancel</string>
    <string name="setUnitsPrompt">Set Distance Units</string>
    <string-array name="units">
        <item>Meters</item>
        <item>Feet</item>
        <item>Yards</item>
    </string-array>
    <string name="nDialog_title">Name and Distance Dialog</string>
    <string name="nDialog_text">Do you wish to enter your name and the targets distance on the score card?</string>


</resources>
