<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/fOptionAndroid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/redoOption"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/fOptionIos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detailOption"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/fOptionWindows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showOption"
        android:textAllCaps="false"
        android:textSize="20sp" />

</LinearLayout>